fix: mobile index content alignment

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -218,7 +218,7 @@ main {
     }
 
     main {
-	padding: 1rem;
+	padding: 2rem;
     }
     
     pre {
@@ -231,7 +231,6 @@ main {
     
     .post-article {
 	margin-top: 0;
-	padding: 1rem;
 
 	.post-header {
 	    padding: 0 0rem;
